--- a/.github/workflows/tedchamb.yml
+++ b/.github/workflows/tedchamb.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run test script
         working-directory: examples/${{ matrix.directory }}
-        for i in {1..100}; do
-          run: ./scripts/test.sh
-        done
+        run: |
+          for i in {1..100}; do
+            run: ./scripts/test.sh
+          done
