--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -29,6 +29,9 @@ jobs:
             directory: chrome-for-testing #browser not available for Linux/arm64
     runs-on: ${{ matrix.os }}
     steps:
+      - name: where is npm
+        runs: whereis npm
+      
       - uses: actions/checkout@v4
       - name: Run test script
         working-directory: examples/${{ matrix.directory }}
