--- a/.github/workflows/tedchamb-npmciloop.yml
+++ b/.github/workflows/tedchamb-npmciloop.yml
@@ -32,5 +32,6 @@ jobs:
           set -x
           for i in {1..100}; do
             npm ci
-            npm cache clean --force
+            rm -rf node_modules package-lock.json
+            npm install
           done
