--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -32,6 +32,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Start Docker in case it's not running on arm VMs
         run: sudo systemctl start docker
+    - name: Enable debug logging
+        run: echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV    
       - name: Run test script
         working-directory: examples/${{ matrix.directory }}
         run: ./scripts/test.sh
