--- a/.github/workflows/jianges.yml
+++ b/.github/workflows/jianges.yml
@@ -31,6 +31,10 @@ jobs:
     steps:
       - name: Enable debug logging
         run: echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+      - name: Reinstall Docker
+        run: run: |
+          sudo apt-get remove docker docker-engine docker.io containerd runc
+          sudo apt-get install docker.io
       - uses: actions/checkout@v4
         continue-on-error: true
       - name: Check docker status
