--- a/.github/workflows/jianges.yml
+++ b/.github/workflows/jianges.yml
@@ -40,7 +40,7 @@ jobs:
           sudo apt-get install docker.io
         continue-on-error: true
       - uses: actions/checkout@v4
-        continue-on-error: true
+        continue-on-error: false
       - name: Check docker status
         run: sudo systemctl status docker
         continue-on-error: true
