--- a/.github/workflows/jianges.yml
+++ b/.github/workflows/jianges.yml
@@ -30,7 +30,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Enable debug logging
-        run: echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+        run: |
+          echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+          echo "ACTIONS_RUNNER_DEBUG=true" >> $GITHUB_ENV
       - uses: actions/checkout@v4
         continue-on-error: false
       - name: Reinstall Docker
