--- a/.github/workflows/tedchamb-reinstall.yml
+++ b/.github/workflows/tedchamb-reinstall.yml
@@ -1,1 +1,46 @@
+name: tedchamb-npmciloop
+# This workflow tests examples from the examples directory of this repo.
 
+on:
+  push:
+    paths:
+      - examples/**
+  pull_request:
+  workflow_dispatch:
+
+jobs:
+  example:
+    strategy:
+      fail-fast: false
+      matrix:
+        directory: [
+          firefox-esr,
+          ]
+        os: [
+          ubuntu-24.04-arm  # testing Linux/arm64 platform
+          ]
+        exclude:
+          - os: ubuntu-24.04-arm
+            directory: chrome-for-testing #browser not available for Linux/arm64
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: reinstall
+        working-directory: examples/${{ matrix.directory }}
+        run: |
+          set -e
+          set -x
+          sudo apt update
+          sudo apt install --reinstall -y nodejs npm
+      - uses: actions/checkout@v4
+      - name: Run test script
+        working-directory: examples/${{ matrix.directory }}
+        run: |
+          set -e
+          set -x
+          for i in {1..100}; do
+            npm ci
+            npm cache clean --force
+            rm -rf node_modules package-lock.json
+            npm install
+          done
+          
