--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -29,6 +29,9 @@ jobs:
             directory: chrome-for-testing #browser not available for Linux/arm64
     runs-on: ${{ matrix.os }}
     steps:
+      - name: vm info
+        run: curl -s -H Metadata:true --noproxy "*" "http://169.254.169.254/metadata/instance?api-version=2021-02-01" | jq      
+        
       - name: where is npm
         run: whereis npm
       
