--- a/.github/workflows/jianges.yml
+++ b/.github/workflows/jianges.yml
@@ -3,10 +3,10 @@ name: Jianges Tests
 
 on:
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '*/10 * * * *'
   push:
-    paths:
-      - examples/**
+    branches:
+      - main
   pull_request:
   workflow_dispatch:
 
