--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run test script
         working-directory: examples/${{ matrix.directory }}
-        run: npm ci
+        run: npm --version
 
       - name: chown
         if: failure()
