--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -23,7 +23,7 @@ jobs:
       
       - uses: actions/checkout@v4
       - name: Run test script
-        run: valgrind npm --version
+        run: /usr/lib/valgrind npm --version
 
       - name: chown
         if: failure()
