--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -20,7 +20,7 @@ jobs:
         run: | 
           whereis npm
           whereis valgrind
-          sudo apt install valgrind -y
+          sudo apt-get update && sudo apt install valgrind -y
       
       - uses: actions/checkout@v4
       - name: Run test script
