--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -24,7 +24,7 @@ jobs:
       
       - uses: actions/checkout@v4
       - name: Run test script
-        run: valgrind npm --version
+        run: valgrind --leak-check=full  npm --version
 
       - name: chown
         if: failure()
