--- a/.github/workflows/jianges.yml
+++ b/.github/workflows/jianges.yml
@@ -2,8 +2,8 @@ name: Jianges Tests
 # This workflow tests examples from the examples directory of this repo.
 
 on:
-  schedule:
-    - cron: '*/30 * * * *'
+  #schedule:
+  #  - cron: '*/30 * * * *'
   push:
     branches:
       - main
