--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -26,11 +26,11 @@ jobs:
         run: npm --version
 
       - name: chown
-        if: failure()
+        if: always() #failure()
         run: sudo chown -R runner:runner /var/log* /var/lib/systemd
         
       - uses: actions/upload-artifact@v4
-        if: failure()
+        if: always() #failure()
         with:
           name: logs-${{ matrix.directory }}-${{ matrix.os }}
           path: |
